# DSChecker

./: .gitignore  README.md  pyproject.toml
src/data/: API_misuses.json  API_misuses_dl.json
src/data/code_snippets/: 10_seaborn_lmplot.py  10c_seaborn_lmplot.py  153_matplotlib_addaxes.py  153c_matplotlib_addaxes.py  1732_numpy_astype.py  1732c_numpy_astype.py  18_seaborn_distplot.py  18c_seaborn_distplot.py  1933_numpy_amin.py  1933c_numpy_amin.py  19_matplotlib_legend.py  19c_matplotlib_legend.py  1_scikitlearn_onehotencoder.py  226_matplotlib_setxticks.py  226c_matplotlib_setxticks.py  22_numpy_log.py  23_seaborn_heatmap.py  23c_seaborn_heatmap.py  24_pandas_resetindex.py  24c_pandas_resetindex.py  26_numpy_insert.py  26c_numpy_insert.py  2750_scikitlearn_rocauc.py  2750c_scikitlearn_rocauc.py  28_scikitlearn_predict.py  28c_scikitlearn_predict.py  2_scikitlearn_dbscan.py  2c_scikitlearn_dbscan.py  3010_numpy_copyto.py  3010c_numpy_copyto.py  3046_matplotlib_gcf.py  3046c_matplotlib_gcf.py  30_matplotlib_text.py  30c_matplotlib_text.py  31_matplotlib_axvspan.py  31c_matplotlib_axvspan.py  (+37 more)
src/dschecker/: detector.py  patch_runner.py  prompt_generator.py  results_report_generator.py  run_detector.sh
src/dschecker_agent/: api_fqn_map.json  detector.py  llm_function_utils.py  llm_functions.py  messages_content_analyzer.py  patch_runner.py  prompt_generator.py  results_report_generator.py  tools.py
src/vector_db/: README.md  add_documents.py  database.py  search_documents.py
tests/: test_fully_qualified_name_resolution.py  test_prompts.py
(+5677 files in other folders)
